--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1034,10 +1034,10 @@ a {
     font-size: var(--h3-font-size);
 }
 
-.content-main-content b,
+/* .content-main-content b,
 .content-main-content strong {
     -webkit-text-stroke-width: 1px;
-}
+} */
 
 .content-main-content button {
     background-color: rgb(247, 229, 191);
@@ -1047,7 +1047,7 @@ a {
     box-sizing: border-box;
     height: 100%;
     font-weight: bolder;
-    -webkit-text-stroke-width: 1px;
+    /* -webkit-text-stroke-width: 1px; */
     filter: drop-shadow(0 4px 1px rgb(229, 164, 60));
 }
 
@@ -2380,10 +2380,10 @@ a {
         font-size: 2.5rem;
     }
 
-    .content-main-content b,
+    /* .content-main-content b,
     .content-main-content strong {
         -webkit-text-stroke-width: 0.1rem;
-    }
+    } */
 
     .content-main-content button {
         border-radius: 1rem;
@@ -2391,7 +2391,7 @@ a {
         box-sizing: border-box;
         height: 100%;
         font-weight: bolder;
-        -webkit-text-stroke-width: 0.1rem;
+        /* -webkit-text-stroke-width: 0.1rem; */
         filter: drop-shadow(0 4px 1px rgb(229, 164, 60));
     }
 
