feature: 7.延伸閱讀的文章標題需上下置中。

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1218,7 +1218,7 @@ a {
 }
 
 .popular-content>div {
-    align-items: flex-start;
+    align-items: center;
     display: flex;
     flex-direction: row;
     gap: 37px;
