--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1575,6 +1575,9 @@ a {
 }
 
 @media (max-width: 768px) {
+    html {
+        scroll-padding-top: 200000rem;
+    }
 
     :root {
         --header-height: 8rem;
