--- a/src/components/index/css/serviceBox.module.css
+++ b/src/components/index/css/serviceBox.module.css
@@ -32,21 +32,25 @@
 
 .service-box>a::after,
 .service-box>div::after {
-  content: '';
+  content: attr(data-title);
+  color: rgb(83, 87, 90);
+  font-size: 24px;
   position: absolute;
-  display: block;
-  width: 131px;
-  height: 67px;
-  background-image: url(./../../../assets/button/more.webp);
   top: calc(27px + 100%);
   left: 50%;
   transform: translateX(-50%);
-}
+  height: 67px;
+  width: 131px;
+  letter-spacing: 4px;
+  border: 3px solid var(--theme-color-hex);
+  border-radius: 5px;
+  font-weight: 700;
 
-.service-box>a:hover::after,
-.service-box>div:hover::after {
-  /* TODO: 正式需解除 */
-  /* background-image: url(/assets/button/more_h.webp); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 2px;
+  box-sizing: border-box;
 }
 
 .service-header {
@@ -58,14 +62,9 @@
   color: grey;
 }
 
-.service-header:first-child {
-  /* white-space: nowrap; */
-}
-
 .service-header:last-child {
   font-size: 12px;
   letter-spacing: 1.5px;
-  /* white-space: wrap; */
 }
 
 .service-body {
@@ -148,22 +147,10 @@
 
   .service-box>a::after,
   .service-box>div::after {
-    background-image: url(./../../../assets/button/more.webp);
-    content: "";
-    display: block;
-    height: 4.6rem;
-    left: 50%;
-    position: absolute;
+    font-size: 1.6rem;
     top: calc(1.4rem + 100%);
-    transform: translateX(-50%);
+    height: 4.6rem;
     width: 9rem;
-    background-size: cover;
-  }
-
-  .service-box>a:hover::after,
-  .service-box>div:hover::after {
-    /* TODO: 正式需解除 */
-    /* background-image: url(/assets/button/more_h.webp); */
   }
 
   .service-header {
@@ -184,6 +171,5 @@
 
   .service-body {
     line-height: 2;
-
   }
 }
