--- a/src/components/index/css/serviceBox.module.css
+++ b/src/components/index/css/serviceBox.module.css
@@ -9,7 +9,6 @@
 
 .service-box>a,
 .service-box>div {
-  background-position: top;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -25,7 +24,7 @@
   justify-content: space-between;
   cursor: pointer;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top center;
   background-size: contain;
   white-space: pre;
 }
@@ -34,23 +33,31 @@
 .service-box>div::after {
   content: attr(data-title);
   color: rgb(83, 87, 90);
-  font-size: 24px;
+
   position: absolute;
   top: calc(27px + 100%);
   left: 50%;
   transform: translateX(-50%);
+
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 4px;
+
   height: 67px;
   width: 131px;
-  letter-spacing: 4px;
+
   border: 3px solid var(--theme-color-hex);
-  border-radius: 5px;
-  font-weight: 700;
+  border-radius: 8px;
+
+  padding-left: 2px;
+  box-sizing: border-box;
+
+  background-color: white;
+  filter: drop-shadow(1px 3px 3px rgba(0 0 0 /0.4));
 
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 2px;
-  box-sizing: border-box;
 }
 
 .service-header {
@@ -124,25 +131,11 @@
 
   .service-box>a,
   .service-box>div {
-    background-position: top;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    font-family: Openhuninn, Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 700;
-    justify-content: space-between;
-    letter-spacing: 1px;
-    position: relative;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
     width: 15rem;
     height: 26rem;
     padding: unset;
-    padding-bottom: 1rem;
-    padding: unset;
-    ;
   }
 
   .service-box>a::after,
