--- a/src/components/content/css/mainContent.css
+++ b/src/components/content/css/mainContent.css
@@ -70,6 +70,7 @@
 
 .content-main-content img {
   width: 100%;
+  height: auto;
 }
 
 .content-main-content p {
@@ -78,7 +79,8 @@
 
 .content-main-content h1,
 .content-main-content h2,
-.content-main-content h3 {
+.content-main-content h3,
+.content-main-content h4 {
   font-weight: bold;
 }
 
